syntax = "proto3";

option java_package = "com.github.veithen.daemon.grpc";
option java_multiple_files = true;

message Initialize {
    string daemon_class = 1;
}

message Start {
    repeated string daemon_arg = 1;
}

message Stop {}

message DaemonRequest {
    oneof request {
        Initialize initialize = 1;
        Start start = 2;
        Stop stop = 3;
    }
}

message Initialized {}

message Ready {}

message Stopped {}

message DaemonResponse {
    oneof response {
        Initialized initialized = 1;
        Ready ready = 2;
        Stopped stopped = 3;
    }
}

service DaemonLauncher {
    rpc RunDaemon(stream DaemonRequest) returns (stream DaemonResponse);
}
